# fp-playground

./: .gitignore  README.md  pyproject.toml  setup.cfg  tasks.py
examples/: functional_programming.py  writer_pattern.py
examples/error_types/: README.md  custom_errors_with_exceptions.py  custom_errors_with_exceptions__wc.py  custom_errors_with_results_01_imperative.py  custom_errors_with_results_01_imperative__wc.py  custom_errors_with_results_02_imperative_error_translation.py  custom_errors_with_results_02_imperative_error_translation__wc.py  custom_errors_with_results_03_functional_programming.py  custom_errors_with_results_03_functional_programming__wc.py
src/_fp/: _result_types.py
src/_fp_devtools/: __main__.py  estimator.py
src/fp/: __init__.py  _func_types.py  _result_types.py  fn_async.py  fn_sync.py  func_async.py  func_sync.py  promise.py  result.py  writer.py
src/fp_extras/: error.py
tests/fp/: fake.py  test_fn_async.py  test_fn_sync.py  test_func_async.py  test_promise.py  test_result.py
tests/fp_extras/: test_error.py
tests/fp_extras/error/: expect_error_typing.py
